--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html data-wf-page="608265809de4cf7b2344f1f2"
-  data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1">
+  data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="author" content="One Up">
-    <link rel="canonical" href="https://startups.courses">
+    <link rel="canonical" href="https://startups.courses/page2">
     <meta name="keywords"
         content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds">
     <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
@@ -23,7 +23,7 @@
     <meta itemprop="image" content="https://startups.courses/assets/img/cover.png">
     <meta property="og:title" content="OneUp - Let's Create a Startup">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://startups.courses/">
+    <meta property="og:url" content="https://startups.courses/courses">
     <meta property="og:description"
         content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
     <meta property="og:site_name" content="OneUp">
