--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation-mob w-nav">
         <div class="wrapper navbar-wrapper">
-          <a href="/" class="brand w-nav-brand"><img src="assets/img/logo.png" loading="lazy" alt=""
+          <a href="/" class="brand w-nav-brand"><img src="assets/img/logo.png" loading="lazy" alt="Logo"
               class="image contain" /></a>
           <nav role="navigation" class="mobile-nav w-nav-menu">
             <div class="mobile-nav-inner-flex">
@@ -295,7 +295,7 @@
     </div>
     <div class="wrapper contact-hero">
       <div class="contact-heading-wrapper">
-        <h2 class="bold"><strong>Get </strong><strong>in touch</strong></h2>
+        <h1 class="bold"><strong>Get </strong><strong>in touch</strong></h1>
       </div>
     </div>
   </div>
@@ -394,7 +394,7 @@
     <div class="wrapper footer-wrapper">
       <div class="footer-up">
         <div class="footer-main-column"><a href="/" class="footer-logo w-inline-block"><img
-              src="assets/img/logo-white.jpeg" loading="lazy" alt="" class="image contain" /></a>
+              src="assets/img/logo-white.jpeg" loading="lazy" alt="Logo" class="image contain" /></a>
           <div class="footer-text">
             <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most
               credible startup accelerator - One Up</div>
@@ -402,13 +402,13 @@
           <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
             <div class="footer-email-image"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
-                loading="lazy" alt="" class="image contain" /></div>
+                loading="lazy" alt="Mail" class="image contain" /></div>
             <div class="text-block footer-email-text black-link">info@startups.courses</div>
           </a>
           <a href="tel:8274921319" class="footer-email w-inline-block">
             <div class="footer-email-image"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771531e205c77499e2d3c_Vector-4.svg"
-                loading="lazy" alt="" class="image contain" /></div>
+                loading="lazy" alt="mail" class="image contain" /></div>
             <div class="text-block footer-email-text black-link">+91 827-492-1319</div>
           </a>
         </div>
@@ -445,16 +445,16 @@
             <div class="text-block _14-px footer-social-media">Social Media :</div><a href="https://www.facebook.com/"
               target="_blank" class="footer-social-link w-inline-block"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153f4f8b17dd57bebe7_Vector-3.svg"
-                loading="lazy" alt="" class="image contain" /></a>
+                loading="lazy" alt="fb" class="image contain" /></a>
             <a href="https://twitter.com/" target="_blank" class="footer-social-link w-inline-block"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/6067715304473099d43366a4_Vector-2.svg"
-                loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/" target="_blank"
+                loading="lazy" alt="tw" class="image contain" /></a><a href="https://www.linkedin.com/" target="_blank"
               class="footer-social-link w-inline-block"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771534e5efd48eb09ce63_Vector-1.svg"
-                loading="lazy" alt="" class="image contain" /></a>
+                loading="lazy" alt="ln" class="image contain" /></a>
             <a href="https://www.instagram.com/" target="_blank" class="footer-social-link w-inline-block"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771548d2cabe6dc29653f_Group%20897.svg"
-                loading="lazy" alt="" class="image contain" /></a>
+                loading="lazy" alt="ig" class="image contain" /></a>
           </div>
         </div>
       </div>
