--- a/courses.html
+++ b/courses.html
@@ -6,25 +6,20 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Entrepreneurship Courses | One Up</title>
+    <title>Entrepreneurship Courses - Tech Accelerator Program - Innovation Program & Ecosystem</title>
     <meta name="author" content="OneUp">
     <link rel="canonical" href="https://startups.courses/courses">
     <meta name="keywords"
         content="startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, startup india, startup ideas, startup in kolkata, startup meaning, startup business ideas, startupwala, startup india scheme, entrepreneurship, entrepreneurship development, Delhi Skill and Entrepreneurship University, shark tank, unicorn startup, what is startup, startup companies, new startup, startup funding, startups in india, global startup ecosystem index 2021, design a plan for your own startup and mention its financial aspects, 1 billion dollars in rupees, startup india is an initiative of the, what is unicorn startup, ankur warikoo startup course, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds">
-    <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
-        property="og:description">
-    <meta
-        content="Navigating Your Journey of Entrepreneurship with One Up. We help companies grow by turning information into experiences people care about."
-        property="og:description" />
     <meta content="https://startups.courses/assets/img/startup.webp" property="og:image" />
     <meta itemprop="name" content="OneUp">
-    <meta itemprop="description" content="Tips & Tutorials for Navigating Your Journey of Entrepreneurship">
+    <meta itemprop="description" content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time. We help companies grow by turning information into experiences people care about.">
     <meta itemprop="image" content="https://startups.courses/assets/img/cover.png">
-    <meta property="og:title" content="OneUp - Let's Create a Startup">
+    <meta property="og:title" content="Entrepreneurship Courses - Tech Accelerator Program - Innovation Program & Ecosystem">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://startups.courses/">
+    <meta property="og:url" content="https://startups.courses/courses">
     <meta property="og:description"
-        content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
+        content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time. We help companies grow by turning information into experiences people care about.">
     <meta property="og:site_name" content="OneUp">
     <meta content="https://startups.courses/assets/img/unity.png" property="twitter:image" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -104,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               data-easing2="ease" role="banner" class="navigation w-nav">
               <div class="wrapper navigation-wrapper">
                   <div class="navigation-left"><a href="/" class="navbar-brand w-nav-brand"><img
-                              src="assets/img/logo-white.jpeg" loading="lazy" alt="" class="image contain" /></a>
+                              src="assets/img/logo-white.jpeg" loading="lazy" alt="One Up" class="image contain" /></a>
                       <nav role="navigation" class="navigation-menu w-nav-menu">
                           <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                               <div class="dropdown-toggle w-dropdown-toggle">
@@ -226,7 +221,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
               data-easing2="ease" role="banner" class="navigation-mob w-nav">
               <div class="wrapper navbar-wrapper"><a href="index" aria-current="page"
-                      class="brand w-nav-brand w--current"><img src="assets/img/logo-white.jpeg" loading="lazy" alt="OneUp"
+                      class="brand w-nav-brand w--current"><img src="assets/img/logo-white.jpeg" loading="lazy" alt="One Up"
                           sizes="(max-width: 150px) 100vw, 150px" class="image contain" /></a>
                   <nav role="navigation" class="mobile-nav w-nav-menu">
                       <div class="mobile-nav-inner-flex">
@@ -464,7 +459,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img
                       src="assets/img/vadidation.webp"
                       loading="lazy"
-                      alt="Validation"
+                      alt="Idea-Validation"
                       class="image hover-scale-animation"
                     />
                   </div>
@@ -546,7 +541,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img
                       src="assets/img/business-tycoons.webp"
                       loading="lazy"
-                      alt=""
+                      alt="One Up business tycoons"
                       class="image hover-scale-animation"
                     />
                   </div>
@@ -585,7 +580,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img
                       src="assets/img/90days.webp"
                       loading="lazy"
-                      alt=""
+                      alt="Grow your business in 90 days"
                       class="image hover-scale-animation"
                     />
                   </div>
@@ -638,13 +633,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                       <div class="footer-email-image"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
-                              loading="lazy" alt="" class="image contain" /></div>
+                              loading="lazy" alt="check" class="image contain" /></div>
                       <div class="text-block footer-email-text black-link">info@startups.courses</div>
                   </a>
                   <a href="tel:8274921319" class="footer-email w-inline-block">
                       <div class="footer-email-image"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771531e205c77499e2d3c_Vector-4.svg"
-                              loading="lazy" alt="" class="image contain" /></div>
+                              loading="lazy" alt="check" class="image contain" /></div>
                       <div class="text-block footer-email-text black-link">+91 827-492-1319</div>
                   </a>
               </div>
@@ -684,17 +679,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                           href="https://www.facebook.com/" target="_blank"
                           class="footer-social-link w-inline-block"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153f4f8b17dd57bebe7_Vector-3.svg"
-                              loading="lazy" alt="" class="image contain" /></a>
+                              loading="lazy" alt="fb" class="image contain" /></a>
                       <a href="https://twitter.com/" target="_blank" class="footer-social-link w-inline-block"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/6067715304473099d43366a4_Vector-2.svg"
-                              loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/"
+                              loading="lazy" alt="tw" class="image contain" /></a><a href="https://www.linkedin.com/"
                           target="_blank" class="footer-social-link w-inline-block"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771534e5efd48eb09ce63_Vector-1.svg"
-                              loading="lazy" alt="" class="image contain" /></a>
+                              loading="lazy" alt="ln" class="image contain" /></a>
                       <a href="https://www.instagram.com/" target="_blank"
                           class="footer-social-link w-inline-block"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771548d2cabe6dc29653f_Group%20897.svg"
-                              loading="lazy" alt="" class="image contain" /></a>
+                              loading="lazy" alt="ig" class="image contain" /></a>
                   </div>
               </div>
           </div>
