--- a/courses.html
+++ b/courses.html
@@ -6,12 +6,14 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Entrepreneurship Courses - Tech Accelerator Program - Innovation Program & Ecosystem</title>
+    <title>Entrepreneurship Courses - Tech Accelerator Program</title>
     <meta name="author" content="OneUp">
     <link rel="canonical" href="https://startups.courses/courses">
     <meta name="keywords"
         content="startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, startup india, startup ideas, startup in kolkata, startup meaning, startup business ideas, startupwala, startup india scheme, entrepreneurship, entrepreneurship development, Delhi Skill and Entrepreneurship University, shark tank, unicorn startup, what is startup, startup companies, new startup, startup funding, startups in india, global startup ecosystem index 2021, design a plan for your own startup and mention its financial aspects, 1 billion dollars in rupees, startup india is an initiative of the, what is unicorn startup, ankur warikoo startup course, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds">
     <meta content="https://startups.courses/assets/img/startup.webp" property="og:image" />
+    <meta name="description" content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time."
+        property="og:description">
     <meta itemprop="name" content="OneUp">
     <meta itemprop="description" content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time. We help companies grow by turning information into experiences people care about.">
     <meta itemprop="image" content="https://startups.courses/assets/img/cover.png">
@@ -626,7 +628,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="wrapper footer-wrapper">
           <div class="footer-up">
               <div class="footer-main-column"><a href="/" class="footer-logo w-inline-block"><img
-                          src="assets/img/logo-white.jpeg" loading="lazy" alt="" class="image contain" /></a>
+                          src="assets/img/logo-white.jpeg" loading="lazy" alt="oneup" class="image contain" /></a>
                   <div class="footer-text">
                       <div class="text-block _16-px brown">Learn the fundamentals of startup entrepreneurship, company building, and how to create new products with real-life examples from successful entrepreneurs.</div>
                   </div>
