--- a/page2.html
+++ b/page2.html
@@ -11,8 +11,8 @@
   <meta name="author" content="One Up">
     <link rel="canonical" href="https://startups.courses/page2">
     <meta name="keywords"
-        content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds">
-    <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
+        content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds, coursera">
+    <meta name="description" content="On a Mission to blueprint startups. One Up teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. Navigate your journey of entrepreneurship with One Up."
         property="og:description">
     <meta
         content="Navigating Your Journey of Entrepreneurship with One Up. We help companies grow by turning information into experiences people care about."
@@ -21,11 +21,11 @@
     <meta itemprop="name" content="OneUp">
     <meta itemprop="description" content="Tips & Tutorials for Navigating Your Journey of Entrepreneurship">
     <meta itemprop="image" content="https://startups.courses/assets/img/cover.png">
-    <meta property="og:title" content="OneUp - Let's Create a Startup">
+    <meta property="og:title" content="Top Startup Courses - Learn Startup Online | One Up">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://startups.courses/courses">
     <meta property="og:description"
-        content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
+        content="On a Mission to blueprint startups. One Up teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
     <meta property="og:site_name" content="OneUp">
     <meta content="https://startups.courses/assets/img/us.webp" property="twitter:image" />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
@@ -83,7 +83,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         role="banner" class="navigation w-nav">
         <div class="wrapper navigation-wrapper">
           <div class="navigation-left">
-            <a href="/" class="navbar-brand w-nav-brand"><img src="assets/img/logo-white.jpeg" loading="lazy" alt=""
+            <a href="/" class="navbar-brand w-nav-brand"><img src="assets/img/logo-white.jpeg" loading="lazy" alt="One Up"
                 class="image contain" /></a>
             <nav role="navigation" class="navigation-menu w-nav-menu">
               <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -422,7 +422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
-                      <img src="assets/img/t3.png" loading="lazy" alt=""
+                      <img src="assets/img/t3.png" loading="lazy" alt="Salman Khan"
                         sizes="(max-width: 991px) 32px, (max-width: 1279px) 3vw, (max-width: 1439px) 32px, (max-width: 1919px) 2vw, 32px"
                         class="image" />
                     </div>
@@ -452,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
-                      <img src="assets/img/t1.png" loading="lazy" alt=""
+                      <img src="assets/img/t1.png" loading="lazy" alt="oneup"
                         sizes="(max-width: 991px) 32px, (max-width: 1279px) 3vw, (max-width: 1439px) 32px, (max-width: 1919px) 2vw, 32px"
                         class="image" />
                     </div>
@@ -484,7 +484,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
-                      <img src="assets/img/t3.png" loading="lazy" alt=""
+                      <img src="assets/img/t3.png" loading="lazy" alt="oneup"
                         sizes="(max-width: 991px) 32px, (max-width: 1279px) 3vw, (max-width: 1439px) 32px, (max-width: 1919px) 2vw, 32px"
                         class="image" />
                     </div>
@@ -499,7 +499,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="enroll" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/lean_canvas.jpeg" loading="lazy" alt=""
+                  <img src="assets/img/lean_canvas.jpeg" loading="lazy" alt="lean canvas"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -599,20 +599,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="wrapper footer-wrapper">
         <div class="footer-up">
             <div class="footer-main-column"><a href="/" class="footer-logo w-inline-block"><img
-                        src="assets/img/logo-white.jpeg" loading="lazy" alt="" class="image contain" /></a>
+                        src="assets/img/logo-white.jpeg" loading="lazy" alt="oneup" class="image contain" /></a>
                 <div class="footer-text">
                     <div class="text-block _16-px brown">Learn the fundamentals of startup entrepreneurship, company building, and how to create new products with real-life examples from successful entrepreneurs.</div>
                 </div>
                 <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                     <div class="footer-email-image"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
-                            loading="lazy" alt="" class="image contain" /></div>
+                            loading="lazy" alt="check" class="image contain" /></div>
                     <div class="text-block footer-email-text black-link">info@startups.courses</div>
                 </a>
                 <a href="tel:8274921319" class="footer-email w-inline-block">
                     <div class="footer-email-image"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771531e205c77499e2d3c_Vector-4.svg"
-                            loading="lazy" alt="" class="image contain" /></div>
+                            loading="lazy" alt="check" class="image contain" /></div>
                     <div class="text-block footer-email-text black-link">+91 827-492-1319</div>
                 </a>
             </div>
@@ -652,17 +652,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         href="https://www.facebook.com/" target="_blank"
                         class="footer-social-link w-inline-block"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153f4f8b17dd57bebe7_Vector-3.svg"
-                            loading="lazy" alt="" class="image contain" /></a>
+                            loading="lazy" alt="fb" class="image contain" /></a>
                     <a href="https://twitter.com/" target="_blank" class="footer-social-link w-inline-block"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/6067715304473099d43366a4_Vector-2.svg"
-                            loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/"
+                            loading="lazy" alt="tw" class="image contain" /></a><a href="https://www.linkedin.com/"
                         target="_blank" class="footer-social-link w-inline-block"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771534e5efd48eb09ce63_Vector-1.svg"
-                            loading="lazy" alt="" class="image contain" /></a>
+                            loading="lazy" alt="ln" class="image contain" /></a>
                     <a href="https://www.instagram.com/" target="_blank"
                         class="footer-social-link w-inline-block"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771548d2cabe6dc29653f_Group%20897.svg"
-                            loading="lazy" alt="" class="image contain" /></a>
+                            loading="lazy" alt="ig" class="image contain" /></a>
                 </div>
             </div>
         </div>
