--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://startups.courses/page2">
     <meta name="keywords"
         content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds, coursera">
-    <meta name="description" content="On a Mission to blueprint startups. One Up teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. Navigate your journey of entrepreneurship with One Up."
+    <meta name="description" content="On a Mission to blueprint startups. One Up teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise."
         property="og:description">
     <meta
         content="Navigating Your Journey of Entrepreneurship with One Up. We help companies grow by turning information into experiences people care about."
