--- a/contact.html
+++ b/contact.html
@@ -7,26 +7,23 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  <title>Contact - One Up Consultancy</title>
+  <title>Personalised Business Coaching Program for Entrepreneurs | One Up</title>
   <meta name="author" content="OneUp">
   <link rel="canonical" href="https://startups.courses/contact">
   <meta name="keywords"
     content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, business course, entrepreneurship course, business schools, upkey, executive mba, weekend business school, online business school, bba internship, business school course">
-  <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up." property="og:description">
-  <meta
-    content="Navigating Your Journey of Entrepreneurship with One Up. We help companies grow by turning information into experiences people care about."
-    property="og:description" />
-  <meta content="https://startups.courses/assets/img/unity.png" property="og:image" />
+  <meta name="description" content="Navigate Your Journey of Entrepreneurship with One Up." property="og:description">
+  <meta content="https://startups.courses/assets/img/startup.webp" property="og:image" />
   <meta itemprop="name" content="OneUp">
   <meta itemprop="description" content="Tips & Tutorials for Navigating Your Journey of Entrepreneurship">
-  <meta itemprop="image" content="https://startups.courses/assets/img/unity.png">
-  <meta property="og:title" content="OneUp - Let's Create a Startup">
-  <meta property="og:type" content="article">
-  <meta property="og:url" content="https://startups.courses/">
+  <meta itemprop="image" content="https://startups.courses/assets/img/startup.webp">
+  <meta property="og:title" content="Personalised Business Coaching Program for Entrepreneurs | One Up">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://startups.courses/contact">
   <meta property="og:description"
-    content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
-  <meta property="og:site_name" content="OneUp">
-  <meta content="https://startups.courses/assets/img/unity.png" property="twitter:image" />
+    content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness.">
+  <meta property="og:site_name" content="One Up">
+  <meta content="https://startups.courses/assets/img/startup.webp" property="twitter:image" />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   <!--[if lt IE 9
       ]><script
