--- a/intern.html
+++ b/intern.html
@@ -3,22 +3,22 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>One Up Internship</title>
+    <title>Learning & Development Program by One Up</title>
     <meta
         content="From brand identity, through messaging strategy, to brand touchpoint experiences, we increase your opportunity to succeed."
         name="description" />
-    <meta content="Get Paid Internships" property="og:title" />
+    <meta content="Learning & Development Program Internships | One Up" property="og:title" />
     <meta
         content="From brand identity, through messaging strategy, to brand touchpoint experiences, we increase your opportunity to succeed."
         property="og:description" />
-    <meta content="https://startups.courses/assets/img/banner.jpeg" property="og:image" />
+    <meta content="https://startups.courses/assets/img/startup.webp" property="og:image" />
     <meta
         content="From brand identity, through messaging strategy, to brand touchpoint experiences, we increase your opportunity to succeed."
         property="twitter:title" />
     <meta
         content="Meet Startup Kit, from brand identity, through messaging strategy, to brand touchpoint experiences, we increase your opportunity to succeed."
         property="twitter:description" />
-    <meta content="https://startups.courses/assets/img/banner.jpeg" property="twitter:image" />
+    <meta content="https://startups.courses/assets/img/startup.webp" property="twitter:image" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
