--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
     <link href="assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="assets/img/favicon.ico" rel="apple-touch-icon" />
+    <link href="assets/img/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="assets/img/favicon.jpeg" rel="shortcut icon" type="image/x-icon" />
+    <link href="assets/img/favicon.svg" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body oncontextmenu="return false">
