--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="text-block _16-px brown">&quot;Learn to think like an entrepreneur and to solve real-world problems by creating something new.&quot;</div>
                     </div>
                     <div class="home-1-people-feedback-name">
-                        <div class="text-block _16-px brown medium">-Master Subhajit Ghosh, Co-Founder, One Up</div>
+                        <div class="text-block _16-px brown medium">-Master Subhajit Ghosh, CEO, OneUp</div>
                     </div>
                     <div class="home-1-people-feedback-image"><img src="assets/img/logo-white.jpeg" loading="lazy" alt="Logo"
                             class="image contain" /></div>
