--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta charset="utf-8" />
-    <title>One Up - Let's Meet Our Team</title>
+    <title>OneUp</title>
     <meta name="author" content="One Up">
     <link rel="canonical" href="https://startups.courses/about">
     <meta name="keywords"
