--- a/enroll.html
+++ b/enroll.html
@@ -98,7 +98,12 @@
                                 data-name="email" placeholder="" id="email" required="" />
                         </div>
                         <input type="submit" value="Register" data-wait="Please wait..."
-                            class="submit-green-button w-button" />
+                            class="submit-green-button w-button" onClick="myFunction()"/>
+                               <script>
+                                function myFunction() {
+                                  window.location.href="https://rzp.io/l/BasicOneUp";  
+                                }
+                              </script>
                         <div id="form-alerts" style="text-align:center;"></div>    
                         <div class="form-text-block-16px">
                             <span class="white-text-opacity-50">Already have enrolled ?</span>
