--- a/internship.html
+++ b/internship.html
@@ -83,7 +83,12 @@
                                 id="answer" required="" />
                         </div>
                         <input type="submit" value="Register" data-wait="Please wait..."
-                            class="submit-green-button w-button" />
+                            class="submit-green-button w-button" onClick="myFunction()/>
+                            <script>
+                                function myFunction() {
+                                  window.location.href="https://rzp.io/l/One-Up-Consultancy";  
+                                }
+                            </script>
                         <div id="form-alerts" style="text-align:center;"></div>    
                         <div class="form-text-block-16px">
                             <span class="white-text-opacity-50">Having some issues ?</span>
