--- a/about.html
+++ b/about.html
@@ -357,7 +357,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                             <div class="team-about-wrapper">
                                 <div class="text-block _16-px brown">A Cybersecurity enthusiast, a former model, an
-                                    author & to be Engineer trying to bring about a change in the socio-economic
+                                    author & Engineer trying to bring about a change in the socio-economic
                                     upliftment of the masses.</div>
                             </div>
                         </div>
